          now more consistently use size_t (or ssize_t when needed), and
          the types used for "small" integers now more consistently use int
          instead of unsigned.  Note in particular that some types have
          changed from signed to unsigned, and vice versa.
    ENGINE:
        Class AbelianGroup:
            - New tightDecoding() routines.
        Class CallableArg<...>:
            - Now a public helper class in the main regina:: namespace.
            - Now behaves gracefully if the given index is out of range.
        Class Cut:
            - New class for describing graph-style cuts on triangulations or
              facet pairings.
        Class Edge<3>:
            - Now specialised (instead of using the generic Face template).
            - New routine linkingSurface().
        Class Example<2>:
            - Both orientable() and nonOrientable() now promise minimal
              triangulations for small cases (0 and 0,1 punctures respectively).
              Thanks to Alex He for the once-punctured non-orientable code.
        Class Example<3>:
            - New routine handlebody(), thanks to Alex He.
        Class Example<4>:
            - New routine k3().
            - Reflected the result of cp2() so that it has intersection
              form [1], not [-1].
        Class FacetPairing<dim>:
            - New routine isConnected().
            - New routines canonical() and canonicalAll().
            - New routines for tight encodings and decodings.
            - In findAllPairings(), the action is no longer required to
              take the list of all automorphisms if it does not need them.
            - Renamed toTextRep() to textRep().  The old name is kept as
              a deprecated alias.
            - The IsoList type alias has changed from std::list to std::vector,
              for better performance.
        Class FacetPairing<3>:
            - Routine followChain() now uses ssize_t for the tetrahedron index.