@@ -94,6 +94,54 @@ BanBoundary::BanBoundary(const LPInitialTableaux<LPConstraint>& init) :
 }
 
 template <class LPConstraint>
+BanEdge::BanEdge(const LPInitialTableaux<LPConstraint>& init, Edge<3>* edge) :
+        BanConstraintBase(init) {
+    size_t n = tri_.size();
+    size_t tet;
+    int type;
+
+    // The implementation here is a little inefficient (if we had the
+    // inverse to columnPerm then we could just iterate through the
+    // embeddings of the given edge).  However, this routine is only called
+    // at the beginning of the enumeration process so no need to worry.
+
+    const size_t* columnPerm = init.columnPerm();
+
+    // Ban quadrilaterals that meet the given edge.
+    for (size_t i = 0; i < 3 * n; ++i) {
+        if (system_.quad()) {
+            tet = columnPerm[i] / 3;
+            type = columnPerm[i] % 3;
+        } else {
+            tet = columnPerm[i] / 7;
+            type = (columnPerm[i] % 7) - 4;
+        }
+
+        for (int k = 0; k < 6; ++k)
+            if (k != type && k != 5 - type)
+                if (tri_.tetrahedron(tet)->edge(k) == edge) {
+                    banned_[i] = true;
+                    break;
+                }
+    }
+
+    // Ban triangles that meet the given edge.
+    if (system_.standard())
+        for (size_t i = 3 * n; i < 7 * n; ++i) {
+            tet = columnPerm[i] / 7;
+            type = columnPerm[i] % 7;
+
+            for (int k = 0; k < 4; ++k)
+                if (k != type)
+                    if (tri_.tetrahedron(tet)->edge(
+                            Edge<3>::edgeNumber[k][type]) == edge) {
+                        banned_[i] = true;
+                        break;
+                    }
+        }
+}
+
+template <class LPConstraint>
 BanTorusBoundary::BanTorusBoundary(
         const LPInitialTableaux<LPConstraint>& init) :
         BanConstraintBase(init) {
